--- a/styles.css
+++ b/styles.css
@@ -4,23 +4,149 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 18px;
     line-height: 1.35;
-    background-color: #f4f4f4;
+    background-color: #fcf7f7;
+    -ms-overflow-style: none;
+    scrollbar-width: none;    
+}
+body::-webkit-scrollbar { 
+    display: none;
 }
 
 /*global*/
+
 .container{
     width: 80%;
     margin: auto;
     overflow: hidden;
 }
+ul{
+    margin: 0;
+    padding: 0;
+}
+/*Header*/
 
-#skills_heading, #contact_heading, #about{
+header{
+    background: url('img/mac.jpg') no-repeat -150px -50px;
+    color: #ffffff;
+    padding-top: 30px;
+    min-height: 75px;   
+}
+header h1{
+    margin-top: 5px;
+}
+header a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 20px;
+    margin: 0 25px;
+}
+header a:hover{
+    font-weight: 550;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 8px;
+    border-radius: 8%;
+    margin: 0 14.2px;
+}
+header li{
+    list-style: none;
+    display: inline;
+    float: left;
+    /*padding: 0 25px;*/
+}
+header #heading{
+    float: left;
+}
+header #heading h1{
+    margin: 0;
+}
+header nav{
+    float: right;
+    margin-top: 13px;
+}
+/*Showcase*/
+
+#showcase{
+    color: #ffffff;
+    background: url('img/mac.jpg') no-repeat -150px -185px;
+    text-align: center;
+    min-height: 600px;
+}
+#showcase h1{
+    margin-top: 210px;
+    margin-bottom: 10px;
+    font-size: 50px;
+}
+#showcase p{
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+/*skills*/
+
+#skills{
+    margin-top: 25px;
+}
+#skills h2{
+    font-size: 45px;
+    font-weight: 350;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: center;
+}
+#skills .container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 60px;
+    text-align: center;
+}
+#skills p{
+    font-size: 16px;
+    text-align: center;
+    padding: 0 20px;
+}
+#skills .box_img{
+    height: 150px;
+    width: 150px;
+}
+
+/*About*/
+
+#about{
     width: 80%;
     margin: auto;
     text-align: center;
+    margin-top: 25px;
+    min-height: 350px;
+}
+#about h2{
+    font-size: 45px;
+    font-weight: 350;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 30px;
+}
+#about p{
+    padding: 18px 85px;
+    font-size: 20px;
+}
+/*Contact*/
+
+#contact h2{
+    font-size: 45px;
+    font-weight: 350;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: center;
 }
 
-.box_img{
-    height: 150px;
-    width: 150px;
+/*Footer*/
+footer{
+    margin-top: 20px;
+    padding:20px;
+    color: #ffffff;
+    background-color: #020000;
+    text-align: center;
 }
