--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body {
     line-height: 1.35;
     background-color: #fcf7f7;
     -ms-overflow-style: none;
-    scrollbar-width: none;    
+    scrollbar-width: none;   
+    box-sizing:border-box; 
 }
 body::-webkit-scrollbar { 
     display: none;
@@ -128,7 +129,7 @@ header nav{
     margin-bottom: 30px;
 }
 #about p{
-    padding: 18px 85px;
+    padding: 18px 90px;
     font-size: 20px;
 }
 /*Contact*/
@@ -138,8 +139,51 @@ header nav{
     font-weight: 350;
     width: 80%;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     text-align: center;
+}
+#contact .container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    justify-items: auto;
+}
+#form{
+    border: 5px solid #E74C3C;
+    border-radius: 10px;
+    padding: 2rem;
+}
+label{
+    display: block;
+    padding: 0.5rem 0;
+}
+input, textarea{
+    display: block;
+    border: 2px solid #FFE3E1;
+    border-radius: 5px;
+    width: 100%;
+    padding: 0.25rem;
+    font-size: 16px;
+}
+#input-submit{
+    border:0;
+    background:#706ee6;
+    padding:.5rem;
+    color:white;
+    margin:1rem 0;
+    width:auto;
+    cursor:pointer;
+}
+#input-submit:hover{
+    background:#2396e4;
+}
+
+#frame{
+    
+}
+#map{
+    height: 100%;
+    width: 100%;
 }
 
 /*Footer*/
