--- a/styles.css
+++ b/styles.css
@@ -149,9 +149,10 @@ header nav{
     justify-items: auto;
 }
 #form{
-    border: 5px solid #E74C3C;
+    border: 5px solid lightgrey;
     border-radius: 10px;
     padding: 2rem;
+    height: 350px;
 }
 label{
     display: block;
@@ -161,9 +162,10 @@ input, textarea{
     display: block;
     border: 2px solid #FFE3E1;
     border-radius: 5px;
-    width: 100%;
+    width: 94%;
     padding: 0.25rem;
     font-size: 16px;
+    resize: none;
 }
 #input-submit{
     border:0;
@@ -178,9 +180,6 @@ input, textarea{
     background:#2396e4;
 }
 
-#frame{
-    
-}
 #map{
     height: 100%;
     width: 100%;
@@ -193,4 +192,51 @@ footer{
     color: #ffffff;
     background-color: #020000;
     text-align: center;
+}
+
+/*Media Queries*/
+
+@media (min-width: 768px) and (max-width: 1199px){
+    #about p{
+        padding: 18px 70px;
+        font-size: 18px;
+    }
+}
+@media (max-width:767px){
+    header #heading, header nav, header nav li{
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+    header nav{
+        margin-top: 35px;
+        margin-bottom: 10px;
+    }
+    header{
+        background: url('img/mac.jpg') no-repeat -250px -300px;
+    }
+    #showcase{
+        background: url('img/mac.jpg') no-repeat -400px -400px;
+    }
+    #skills .container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+    #about p{
+        padding: 10px;
+        font-size: 18px;
+    }
+    #contact .container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+    #map{
+        height: 400px;
+        width: 400px;
+    }
+    #form{
+        height:auto;
+    }
 }
